# claude-convo-manager

./: .editorconfig  .gitignore  .prettierignore  CLAUDE.md  LICENSE  Makefile  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: release.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: analytics.rs  clone.rs  delete.rs  delete_message.rs  fork_session.rs  ide.rs  messages.rs  mod.rs  projects.rs  rename.rs  replace.rs  search.rs  sessions.rs  shared.rs  sync.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/sync/: engine.rs  parsers.rs  token_calculator.rs
src-tauri/src/types/: api.rs  claude.rs  db.rs
src/lib/: utils.ts
src/lib/api/: analytics.ts  ide.ts  messages.ts  projects.ts  search.ts  sessions.ts  sync.ts
src/lib/stores/: conversationSearch.svelte.ts  ide.svelte.ts  sync.svelte.ts  theme.svelte.ts  updater.svelte.ts
src/lib/types/: claude.ts  db.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/conversations/: +page.svelte
src/routes/projects/: +page.svelte
src/routes/search/: +page.svelte
tauri/: package.json
tauri/src/: app.css
tauri/src-tauri/: tauri.conf.json
tauri/src-tauri/src/: lib.rs
tauri/src/routes/: +layout.svelte  +page.svelte
web/: .gitignore  package.json
web/scripts/: initial-sync.ts  test-db.ts
web/src/: instrumentation.ts
web/src/app/: layout.tsx  page.tsx
(+93 files in other folders)
