[package]
name = "claude-conversations"
version = "0.5.0"
description = "Claude Conversations Manager - Desktop"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
tokio = { version = "1", features = ["full"] }
notify = "6"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
which = "7"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
